--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,57 +1,193 @@
 <%- include('./partials/header'); -%>
-<link rel="stylesheet" href="css/sell.css">
+
+    
+<link rel="stylesheet" href="css/sell.css" />
 <section class="container-sell">
-    <div class="title">
-        <h1>Novo Cadapio Da Semana</h1>
+    <% try { %>
+
+        <% if (inform !== '') { %>
+        <div class="infor"><p><%= inform %></p> </div>
+        <% } %>
+        <% }catch (e) {} %>
+  <div class="title">
+    <h1>Novo Cadapio Da Semana</h1>
+  </div>
+  <form
+    class="form-wrapper"
+    action="/admin"
+    method="post"
+  >
+    <div class="wt-h mg-b product">
+      <label class="form-label" for="data"><span>Data:</span></label>
+      <input
+        class="form-control wt-h"
+        id="data"
+        name="data"
+        type="date"
+        required
+        autocomplete="off"
+      />
     </div>
-    <form class="form-wrapper" action="seller/sell-now" method="post" enctype="multipart/form-data">
-        <div class="wt-h mg-b product">
-            <label class="form-label" for="data"><span>Data:</span></label>
-            <input class="form-control wt-h" id="data" name="data" type="date" required autocomplete="off">
-        </div>
-        <div class="mg-b">
-            <div class="wt-h product">
-                <label class="form-label" for="category">p</label>
-                <select class="form-select" name="category" id="category" required>
-                    <option value="amoço">Amoço</option>
-                    <option value="janta">Janta</option>
-                </select>
-            </div>
-        </div>
-        <div class="wt-h mg-b product">
-            <label class="form-label" for="title"><span>Nome da Refeição:</span></label>
-            <input class="form-control wt-h" id="title" name="title" type="text" required autocomplete="off">
-        </div>
-        <div class="wt-h mg-b product">
-            <label class="form-label" for="description">Ingredintes:</label>
-            <textarea class="description wt-h" name="description" id="description" cols="auto" rows="10" minlength="10"
-                maxlength="250" required></textarea>
-        </div>
+    <div class="mg-b">
+      <div class="wt-h product">
+        <label class="form-label" for="amoço">Refeição:</label>
+        <select class="form-select" name="refeicao1" id="amoço" required>
+          <option value="amoço">Amoço</option>
+          <option value="janta">Janta</option>
+        </select>
+      </div>
+    </div>
+    <div class="wt-h mg-b product">
+      <label class="form-label" for="title"
+        ><span>Nome da Refeição:</span></label
+      >
+      <input
+        class="form-control wt-h"
+        id="title"
+        name="nomeDaRefeiAmo"
+        type="text"
+        required
+        autocomplete="off"
+      />
+    </div>
+    <h2 class="mg-t">Ingredintes:</h2>
+    <div class="wt-h mg-b product">
+      <input
+        class="form-control wt-h"
+        id="amo"
+        name="amo1"
+        type="text"
+        placeholder="ex: arroz"
+        required
+        autocomplete="off"
+      />
+    </div>
+    <div class="wt-h mg-b product">
+      <input
+        class="form-control wt-h"
+        id="amo"
+        name="amo2"
+        type="text"
+        placeholder="ex: arroz"
+        required
+        autocomplete="off"
+      />
+    </div>
+    <div class="wt-h mg-b product">
+      <input
+        class="form-control wt-h"
+        id="amo"
+        name="amo3"
+        type="text"
+        placeholder="ex: banana"
+        autocomplete="off"
+      />
+    </div>
+    <div class="wt-h mg-b product">
+      <input
+        class="form-control wt-h"
+        id="amo"
+        name="amo4"
+        type="text"
+        placeholder="ex: feijão"
+        autocomplete="off"
+      />
+    </div>
+    <div class="wt-h mg-b product">
+      <input
+        class="form-control wt-h"
+        id="amo"
+        name="amo5"
+        type="text"
+        placeholder="ex: salada"
+        autocomplete="off"
+      />
+    </div>
 
-      <hr style="height: .25rem; background-color: #000; margin: 1rem 0 1rem 0;">
+    <hr
+      style="height: 0.25rem; background-color: #000; margin: 1rem 0 1rem 0"
+    />
 
-        <div class="mg-b">
-            <div class="wt-h product">
-                <label class="form-label" for="category">p</label>
-                <select class="form-select" name="category" id="category" required>
-                    <option value="janta">Jantar</option>
-                    <option value="amoço">Amoço</option>
-                </select>
-            </div>
-        </div>
-        <div class="wt-h mg-b product">
-            <label class="form-label" for="title"><span>Nome da Refeição:</span></label>
-            <input class="form-control wt-h" id="title" name="title" type="text" required autocomplete="off">
-        </div>
-        <div class="wt-h mg-b product">
-            <label class="form-label" for="description">Ingredintes:</label>
-            <textarea class="description wt-h" name="description" id="description" cols="auto" rows="10" minlength="10"
-            maxlength="250" required></textarea>
-        </div>
-        <div class="wt-h mg-b product">
-            <button class="btn wt-h" type="submit">Enviar</button>
-        </div>
-    </form>
+    <div class="mg-b">
+      <div class="wt-h product">
+        <label class="form-label" for="category">Refeição:</label>
+        <select class="form-select" name="refeicao2" id="category" required>
+          <option value="janta">Jantar</option>
+          <option value="amoço">Amoço</option>
+        </select>
+      </div>
+    </div>
+    <div class="wt-h mg-b product">
+      <label class="form-label" for="title"
+        ><span>Nome da Refeição:</span></label
+      >
+      <input
+        class="form-control wt-h"
+        id="title"
+        name="nomeDaRefeiJan"
+        type="text"
+        required
+        autocomplete="off"
+      />
+    </div>
+</div>
+<h2 class="mg-t">Ingredintes:</h2>
+<div class="wt-h mg-b product">
+  <input
+    class="form-control wt-h"
+    id="amo"
+    name="jan1"
+    type="text"
+    placeholder="ex: arroz"
+    required
+    autocomplete="off"
+  />
+</div>
+<div class="wt-h mg-b product">
+  <input
+    class="form-control wt-h"
+    id="amo"
+    name="jan2"
+    type="text"
+    placeholder="ex: arroz"
+    required
+    autocomplete="off"
+  />
+</div>
+<div class="wt-h mg-b product">
+  <input
+    class="form-control wt-h"
+    id="amo"
+    name="jan3"
+    type="text"
+    placeholder="ex: banana"
+    autocomplete="off"
+  />
+</div>
+<div class="wt-h mg-b product">
+  <input
+    class="form-control wt-h"
+    id="amo"
+    name="jan4"
+    type="text"
+    placeholder="ex: feijão"
+    autocomplete="off"
+  />
+</div>
+<div class="wt-h mg-b product">
+  <input
+    class="form-control wt-h"
+    id="amo"
+    name="jan5"
+    type="text"
+    placeholder="ex: salada"
+    autocomplete="off"
+  />
+</div>
+    <div class="wt-h mg-b product">
+      <button class="btn wt-h" type="submit">Enviar</button>
+    </div>
+  </form>
 </section>
 
 <script defer src="js/seller.js"></script>
