--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
   <head>
+
+    <meta http-equiv="Content-Language" content="pt-br">  
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
