erro changes in code on lng

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -10,7 +10,7 @@
         <% } %>
         <% }catch (e) {} %>
   <div class="title">
-    <h1>Novo Cadapio Da Semana</h1>
+    <h1>Novo Cardápio</h1>
   </div>
   <form
     class="form-wrapper"
@@ -33,13 +33,13 @@
         <label class="form-label" for="amoço">Refeição:</label>
         <select class="form-select" name="refeicao1" id="amoço" required>
           <option value="amoço">Amoço</option>
-          <option value="janta">Janta</option>
+          <option value="janta">Jantar</option>
         </select>
       </div>
     </div>
     <div class="wt-h mg-b product">
       <label class="form-label" for="title"
-        ><span>Nome da Refeição:</span></label
+        ><span>Prato:</span></label
       >
       <input
         class="form-control wt-h"
@@ -50,7 +50,7 @@
         autocomplete="off"
       />
     </div>
-    <h2 class="mg-t">Ingredintes:</h2>
+    <h2 class="mg-t">Guarnição:</h2>
     <div class="wt-h mg-b product">
       <input
         class="form-control wt-h"
@@ -131,7 +131,7 @@
       />
     </div>
 </div>
-<h2 class="mg-t">Ingredintes:</h2>
+<h2 class="mg-t">Guarnição:</h2>
 <div class="wt-h mg-b product">
   <input
     class="form-control wt-h"
