--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -14,7 +14,7 @@
             <form action="/login" method="POST">
                 <div class="row">
                     <i class="fas fa-user"></i>
-                    <input type="text/email" name="email" placeholder="Email ou Nome de Usarío" required>
+                    <input type="text/email" name="email" placeholder="Email ou Nome de Usuário" required>
                 </div>
                 <div class="row">
                     <i class="fas fa-lock"></i>
@@ -26,7 +26,7 @@
                 </div>
             </form>
         </div>
-        <div class="signup-link"><p>Não é Usarío?</p> <a href="signup"> Criar Conta</a></div>
+        <div class="signup-link"><p>Não tem Cadastro?</p> <a href="signup"> Criar Conta</a></div>
     </div>
     
 </div>
