--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -26,34 +26,34 @@
         <div>Nome<small style="color:red">*</small></div>
         <input type="text" name="name" class="boxes" placeholder="Nome completo" required>
 
-        <div>Nome de Usrío</div>
-        <input type="text" name="username" class="boxes" placeholder="nome de usarío" autocomplete="username">
+        <div>Nome de usuário</div>
+        <input type="text" name="username" class="boxes" placeholder="Nome de usuário" autocomplete="username">
 
         <div>Email<small style="color:red">*</small></div>
         <input type="email" name="email" class="boxes" placeholder="eg@service.com" required autocomplete="email">
 
 
-        <div>Codigo de Administrador</div>
-        <input type="text" name="codigo" class="boxes" placeholder="Codigo de Administrador" >
+        <div>Código de administrador</div>
+        <input type="text" name="codigo" class="boxes" placeholder="Código de administrador" >
 
         <div>Senha<small style="color:red">*</small></div>
-        <input id="password" type="password" name="password" class="boxes" placeholder="Usa Senha"
+        <input id="password" type="password" name="password" class="boxes" placeholder="Digitar senha"
           minlength="6" required autocomplete="new-password">
 
-        <div>Confirma Usa Senha<small style="color:red">*</small></div>
-        <input id="passwordconfirm" type="password" class="boxes" placeholder="Confirma Usa senha" required
+        <div>Confirmar senha<small style="color:red">*</small></div>
+        <input id="passwordconfirm" type="password" class="boxes" placeholder="Confirmar senha" required
           autocomplete="new-password">
       </div>
 
       
       <div class="signup-button">
-        <button type="submit">cadastrar-se</button>
+        <button type="submit">Cadastrar-se</button>
       </div>
     </form>
 
    
     <div class="login ">
-      <p>já tem uma conta? <a href="/">Login</a></p>
+      <p>Já tem uma conta? <a href="/">Login</a></p>
     </div>
   </div>
 </div>
