--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -116,8 +116,8 @@
       <div class="wt-h product">
         <label class="form-label" for="category">Refeição:</label>
         <select class="form-select" name="refeicao2" id="category" required>
-          <option value="janta">JANTAR</option>
-          <option value="amoço">AMOÇO</option>
+          <option value="JANTAR">Jantar</option>
+          <option value="AMOÇO">Amoço</option>
         </select>
       </div>
     </div>
