--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
 :root {
     --primary-color: #FFCC1D;
     --secondary-color: #2C2E43;
-    --btn-color: #053742;
+    --btn-color: #FFD523;
 }
 
 html {
@@ -85,21 +85,22 @@ button:focus:not(:focus-visible) {
 }
 
 .btn {
-    background-color: #fff;
-    border: 1px solid #ced4da;
+    background-color: #9AD0EC;
     border-radius: 0.3rem;
     height: auto;
     line-height: 1.5;
-    padding: 0.5rem;
+    padding: 0.8rem;
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
+    font-weight: 500;
     text-align: center;
 }
 
 .btn:hover {
     border-color: transparent;
+    box-shadow: 0 2px 4px 0 rgba(150, 148, 75, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     background-color: var(--btn-color);
-    color: #fff;
+    color: #000;
 }
 
 .btn:disabled {
