--- a/src/views/partials/reclame.ejs
+++ b/src/views/partials/reclame.ejs
@@ -25,7 +25,7 @@
       <div class="product-description">
         <h3>Mensagem:</h3>
         <div>
-          <span><%=reclame.msg.substr(0, 30)%> ...</span>
+          <span><%=reclame.msg%> ...</span>
         </div>
       </div>
     </div>
