--- a/src/views/partials/reclame.ejs
+++ b/src/views/partials/reclame.ejs
@@ -30,7 +30,7 @@
       </div>
     </div>
     <% })}else{-%>
-    <h1>No product to display</h1>
+    <h1>Nenhuma Reclamação para exibir</h1>
     <%}-%>
   </div>
 </section>
