--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -101,7 +101,7 @@
       <input
         class="form-control wt-h"
         id="amo"
-        name="vegetarino1"
+        name="vegetariano1"
         type="text"
         placeholder="ex: salada"
         autocomplete="off"
@@ -193,7 +193,7 @@
       <input
         class="form-control wt-h"
         id="amo"
-        name="vegetarino1"
+        name="vegetariano2"
         type="text"
         placeholder="ex: salada"
         autocomplete="off"
