--- a/src/views/cardapio.ejs
+++ b/src/views/cardapio.ejs
@@ -34,6 +34,10 @@
           </ul>
         </div>
       </div>
+      <div class="product-name">
+        <h3>Vegetariano:</h3>
+        <span class=""><%=cardapio.jantar.vegetariano %></span>
+      </div>
       <hr>
       <div class="cards-details">
         <div class="product-name">
@@ -55,6 +59,10 @@
               <li><%=cardapio.jantar.ingredintes.jan5%></li>
             </ul>
           </div>
+        </div>
+        <div class="product-name">
+          <h3>Vegetariano:</h3>
+          <span class=""><%=cardapio.jantar.vegetariano %></span>
         </div>
       </div>
     </div>
