--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -26,7 +26,7 @@
       <div class="wt-h product">
         <label class="form-label" for="amoço">Refeição:</label>
         <select class="form-select" name="refeicao1" id="amoço" required>
-          <option value="AMOÇO">Amoço</option>
+          <option value="ALMOÇO">Almoço</option>
           <option value="JANTAR">Jantar</option>
         </select>
       </div>
@@ -118,7 +118,7 @@
         <label class="form-label" for="category">Refeição:</label>
         <select class="form-select" name="refeicao2" id="category" required>
           <option value="JANTAR">Jantar</option>
-          <option value="AMOÇO">Amoço</option>
+          <option value="ALMOÇO">Almoço</option>
         </select>
       </div>
     </div>
