--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #ffcc1d;
   --secondary-color: #2c2e43;
-  --btn-color: #FFD523;
+  --btn-color: #ffd523;
 }
 
 .cards-container {
@@ -18,12 +18,12 @@
 .cards-details {
   color: #000;
 }
-.reclame{
-    border-bottom: 0.01rem solid ;
-    margin-bottom: 0.5rem;
+.reclame {
+  border-bottom: 0.01rem solid;
+  margin-bottom: 0.5rem;
 }
-.reclame h2{
-    text-align: center;
+.reclame h2 {
+  text-align: center;
 }
 .product-name {
   display: flex;
@@ -34,16 +34,15 @@
 .product-name span {
   padding-left: 1rem;
 }
-.product-description{
-    padding: 0 1rem 1rem 1rem;
+.product-description {
+  padding: 0 1rem 1rem 1rem;
 }
 
-.product-description div{
-    border: solid 0.01rem #000;
-    padding: .5rem;
-    background-color: aliceblue;
+.product-description div {
+  border: solid 0.01rem #000;
+  padding: 0.5rem;
+  background-color: aliceblue;
 }
-
 
 .product-btn-links {
   display: flex;
@@ -53,10 +52,9 @@
   margin-top: 0.5rem;
   width: calc(100% - 1rem);
 }
-.product-btn-links a{
-    margin-left: 0.5rem;
-  }
-
+.product-btn-links a {
+  margin-left: 0.5rem;
+}
 
 @media screen and (max-width: 850px) {
   /* product cards */
@@ -70,6 +68,8 @@
   .cards-item {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     display: flex;
+    flex-direction: column;
+
     margin: 0 0 1rem 0;
     width: 100%;
   }
@@ -84,7 +84,6 @@
     width: 60%;
     padding: 0.5rem 0.7rem;
   }
-
 
   @media screen and (min-width: 520px) {
     .cards-container {
