--- a/src/views/cardapio.ejs
+++ b/src/views/cardapio.ejs
@@ -36,7 +36,7 @@
       </div>
       <div class="product-name">
         <h3>Vegetariano:</h3>
-        <span class=""><%=cardapio.jantar.vegetariano %></span>
+        <span class=""><%=cardapio.jantar.vegetariano1 %></span>
       </div>
       <hr>
       <div class="cards-details">
@@ -62,7 +62,7 @@
         </div>
         <div class="product-name">
           <h3>Vegetariano:</h3>
-          <span class=""><%=cardapio.jantar.vegetariano %></span>
+          <span class=""><%=cardapio.jantar.vegetariano2 %></span>
         </div>
       </div>
     </div>
