--- a/public/css/sell.css
+++ b/public/css/sell.css
@@ -1,7 +1,11 @@
 .container-sell {
     width: 100%;
     background-color:#fff;
-    padding-top:2rem;
+    padding-top:.5rem;
+}
+
+.bkg{
+    background-color:#fff;
 }
 
 .title {
