--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -30,7 +30,7 @@
     <% } if(userId !==null ) { %>
     <!-- profile -->
     <div style="display: flex;">
-      <span style="padding-right: 1rem; font-size:1.2rem;"><strong>Admin: </strong> <%= userId.username %></span>
+      <span style="padding-right: 1rem; font-size:1.2rem;"><i class="fas fa-user user"></i><strong>Admin: </strong> <%= userId.username %></span>
       <a href="/logout">Sair</a>
     </div>
     <% } %>
